# parseit-rs

./: Cargo.toml  Dockerfile  README.md  RELEASE.md  dist-workspace.toml  dist.toml  parseit.toon  sample.txt
.githooks/: install.bat  install.sh  pre-commit
.github/workflows/: new-release.yml  release.yml
samples/: LIBRO_IVA_DIGITAL_VENTAS_CBTE.txt
src/: config.rs  io.rs  main.rs  parse.rs
wix/: main.wxs
