[package]
name = "parseit"
version = "0.1.0"
edition = "2024"
authors = ["Patricio Moracho\n<pmoracho@gmail.com>",]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }
const_format = "0.2"
toon-format = "0.3"
rust_decimal = "1.30"
num-format = "0.4"
prettytable-rs = "0.10"

[profile.release]
strip = true
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"