[package]
name = "parseit"
version = "0.1.0"
edition = "2024"
authors = ["Patricio Moracho\n<pmoracho@gmail.com>",]
repository = "https://github.com/pmoracho/parseit-rs"
description = "Herramienta para inerpretar archivos de longitud fija"

[package.metadata.wix]
upgrade-guid = "3F588898-8441-406D-98D9-71CC7F033402"
path-guid = "8DF28319-F01C-4A53-AB2D-448FA84D5037"
license = false
eula = false

[dependencies]
csvlens = { version = "0.12.0", default-features = false, features = ["clipboard"] }    
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }
const_format = "0.2"
toon-format = "0.3"
rust_decimal = "1.30"
num-format = "0.4"
prettytable-rs = "0.10"
encoding_rs = "0.8.35"
tempfile = "3.8"

[profile.release]
strip = true
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
